Folder structure refactor and an added HTML response for track not found in delete operation.
